# newportgame

./: .gitignore  .replit  AGENTS.md
.agents/memory/: MEMORY.md  build-paths-nixos.md  iso-download.md  ps2recomp-status.md
newportgame/: AGENTS.md  replit.md
newportgame/.agents/memory/: MEMORY.md  ps2recomp-status.md  tooling-workflow.md
newportgame/newportgame/tools/ps2recomp/runtime/: patch_output.py  recomp_stats.py  shell.nix
newportgame/newportgame/tools/ps2recomp/runtime/include/: ps2_runtime.h
newportgame/newportgame/tools/ps2recomp/runtime/src/: spu2_stub.cpp
newportgame/newportgame/tools/ps2recomp/src/mips/: disasm.h
newportgame/newportgame/tools/ps2recomp/src/recomp/: recompiler.cpp  recompiler.h
newportgame/tools/ps2recomp/: CMakeLists.txt  README.md  analyze_syscall.py  build.sh  build_relink.sh  check_todos.py  download_iso_robust.py  extract_elf_from_gdrive.py  find_spin.py  run.sh  triage_headless.py  validate_patch.py  validate_progress.py
newportgame/tools/ps2recomp/runtime/: CMakeLists.txt  README.md  install_runtime_deps.sh  patch_output.py
newportgame/tools/ps2recomp/runtime/include/: ps2_runtime.h
newportgame/tools/ps2recomp/runtime/src/: bios_stub.cpp  gs_stub.cpp  host_main.cpp  override_stubs.c  ps2_runtime_data.c
newportgame/tools/ps2recomp/src/: main.cpp
newportgame/tools/ps2recomp/src/elf/: elf_loader.cpp
newportgame/tools/ps2recomp/src/iso/: udf_parser.cpp  udf_parser.h
newportgame/tools/ps2recomp/src/mips/: disasm.cpp
newportgame/tools/ps2recomp/src/recomp/: recompiler.cpp
tools/ps2recomp/: build.sh  build_relink.sh  disassemble_elf.py  download_iso.py  find_loops.py  find_spin_loops.py  install_deps.sh  jalr_targets.py  progress_baseline.json  rebuild_and_test.sh
tools/ps2recomp/runtime/: CMakeLists.txt  build_runtime.sh
tools/ps2recomp/runtime/include/: ps2_gs_regs.h  ps2_runtime.h
tools/ps2recomp/runtime/src/: bios_stub.cpp  host_main.cpp
tools/ps2recomp/src/: main.cpp
tools/ps2recomp/src/elf/: elf_loader.h
tools/ps2recomp/src/mips/: disasm.cpp
tools/ps2recomp/src/recomp/: recompiler.cpp
